package ac.uk.brunel.contextaware;

option java_package = "ac.uk.brunel.contextaware.network.generated";

message Meeting {
    required string meetingId = 1;
    required string presentationLink = 2;
    required string presenter = 3;
    repeated string participants = 4;
    required string title = 5;
    required string description = 6;
    required string location = 7;
    required string startTime = 8;
    required string endTime = 9;
}

message MeetingList {
    repeated Meeting meeting = 1;
}